--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -26,6 +26,7 @@
   - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
   - [459. 重复的子字符串](#459-重复的子字符串)
   - [796. 旋转字符串](#796-旋转字符串)
+  - [97. 交错字符串](#97-交错字符串)
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
@@ -1163,7 +1164,82 @@ public:
 };
 ```
 
+### 97. 交错字符串
+> 给定三个字符串 s1、s2、s3，请你帮忙验证 s3 是否是由 s1 和 s2 交错组成的。
 
+- 多个字符串交叉匹配的问题；
+- 使用双指针无法解决，存在局部非最优的情况
+- 实际上还是要靠dp大法解决：
+  - 状态定义： `dp[i][j]` 表示s1前i个元素和s2前j个元素可以交错地构成s3的前`i+j`个元素
+  - 状态转移： `dp[i][j] = (dp[i-1][j] && s3[i+j-1]==s1[i-1]) | (dp[i][j-1] && s3[i+j-1]==s2[j-1])`
+  - 一点细节： 定义为`[n+1][m+1]` 在遍历中也要考虑判断`i>0/j>0`
+
+```c++
+class Solution {
+public:
+// 初步尝试了双指针方法， 但双指针无法覆盖所有情况， 不是本题的解
+    bool isInterleave(string s1, string s2, string s3) {
+        int n = s1.size();
+        int m = s2.size();
+        int k = s3.size();
+        if (n + m != k) return false;
+        vector<vector<int>> dp(n + 1, vector<int>(m + 1));
+        dp[0][0] = 1;
+        // 考虑空字符串的情况： dp[i][j]: 第i个元素 第j个元素构成 
+        // 设置[n+1][m+1]
+        for (int i = 0; i <= n; i++) {
+            for (int j = 0; j <= m; j++) {
+                if (i > 0) {
+                    dp[i][j] |= dp[i - 1][j] && (s3[i+j-1] == s1[i-1]);
+                }
+                if (j > 0) {
+                    dp[i][j] |= dp[i][j-1] && (s3[i+j-1] == s2[j-1]);
+                }
+            }
+        }
+
+        return dp[n][m];
+
+
+    }
+};
+```
+- 空间压缩: 滚动数组
+  - 使用一维数组，注意避免覆盖
+
+
+```c++
+class Solution {
+public:
+// 初步尝试了双指针方法， 但双指针无法覆盖所有情况， 不是本题的解
+    bool isInterleave(string s1, string s2, string s3) {
+        int n = s1.size();
+        int m = s2.size();
+        int k = s3.size();
+        if (n + m != k) return false;
+        //vector<vector<int>> dp(n + 1, vector<int>(m + 1));
+        vector<int> dp(m + 1);
+        dp[0] = 1;
+        // 考虑空字符串的情况： dp[i][j]: 第i个元素 第j个元素构成 
+        // 设置[n+1][m+1]
+        for (int i = 0; i <= n; i++) {
+            for (int j = 0; j <= m; j++) {
+                if (i > 0) {
+                    // dp[i][j] |= dp[i-1][j] && () 存在覆盖问题 需要避免dp[i-1][j]直接代替dp[i][j] 所以使用了& 
+                    dp[j] &= dp[j] && (s3[i+j-1] == s1[i-1]);
+                }
+                if (j > 0) {
+                    dp[j] |= dp[j-1] && (s3[i+j-1] == s2[j-1]);
+                }
+            }
+        }
+
+        return dp[m];
+
+
+    }
+};
+```
 
 ## 回文串
 
