--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -51,6 +51,7 @@
   - [654. 最大二叉树](#654-最大二叉树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
+  - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
   - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
   - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
@@ -79,7 +80,7 @@
 ### 树的遍历不同方式
 
 #### 先序遍历
-```
+```c++
 class Solution {
     vector<int> res;
 public:
@@ -1187,7 +1188,38 @@ public:
 };
 ```
 
+### offer54. 二叉搜索树的第k大节点
+> 给定一棵二叉搜索树，请找出其中第k大的节点。
+- 与下面的[LC230]相似, 基本做法： 中序遍历得到数组，然后直接取即可，需要注意**遍历顺序**
+  - 求第K大，`right -> root -> left`方式进行遍历，相应第K个元素即为目标值
+- 在逆中序遍历中，进行计数操作，当到第K个元素直接进行结果记录
+  - 亿点细节： 提前结束递归方式： `if (K==0) return;`
+```c++
+class Solution {
+public:
+    int ans = 0;
+    int K;
+    void dfs(TreeNode* root) {
+        // right -> root -> left
+        if (root == nullptr) return;
+        dfs(root -> right); 
+        if (K == 0) return; // 提前剪枝 提高算法效率
+        K--;
+        if (K == 0) {
+            ans = root -> val;
+        }
+        cout << " "<< K << " " << root -> val << endl;
+        dfs(root -> left);
+    }
 
+    int kthLargest(TreeNode* root, int k) {
+        K = k;
+        cout << K << endl;
+        dfs(root);
+        return ans;
+    }
+};
+```
 
 
 
@@ -1238,6 +1270,29 @@ public:
             root = root -> right;
         }
         return res;
+    }
+};
+```
+- 代码优化：
+```c++
+class Solution {
+public:
+    int ans = 0;
+    int K;
+    void dfs(TreeNode* root) {
+        if (root == nullptr) return;
+        dfs(root -> left);
+        if (K == 0) return;
+        K--;
+        if (K == 0) {
+            ans = root -> val;
+        }
+        dfs(root -> right);
+    }
+    int kthSmallest(TreeNode* root, int k) {
+        K = k;
+        dfs(root);
+        return ans;
     }
 };
 ```
