--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -525,7 +525,8 @@ public:
 
 - 遍历解法：利用**中序遍历**得到BST对应的数组，检查是否是单增的数组即可
 ![avatar](./inorder-0.png)
-```/**
+```c++
+/**
  * Definition for a binary tree node.
  * struct TreeNode {
  *     int val;
@@ -558,6 +559,36 @@ public:
       
 };
 ```
+- 基于中序遍历的迭代方式进行实现
+```c++
+class Solution {
+public:
+    bool isValidBST(TreeNode* root) {
+        stack<TreeNode*> st;
+        int flag = 0;
+        int prev = 0;
+        while (!st.empty() || root != nullptr) {
+            while(root) {
+                st.push(root);
+                root = root -> left;
+            }
+            root = st.top();
+            st.pop();
+            int cur = root -> val;
+            
+            if (flag > 0 && cur <= prev) {
+                return false;
+            }
+            flag = 1;
+            prev = cur;
+            root = root -> right;
+        }
+        return true;
+
+    }
+};
+```
+
 ### 100. 相同二叉树
 >  两棵二叉树的根节点 p 和 q ，编写一个函数来检验这两棵树是否相同。如果两个树在结构上相同，并且节点具有相同的值，则认为它们是相同的
 
