--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -21,6 +21,9 @@
   - [198. 打家劫舍](#198-打家劫舍)
   - [213. 打家劫舍 II](#213-打家劫舍-ii)
   - [337. 打家劫舍 III](#337-打家劫舍-iii)
+- [游戏对战系列](#游戏对战系列)
+  - [486. 预测赢家](#486-预测赢家)
+  - [877. 石子游戏](#877-石子游戏)
 - [Others](#others)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
@@ -853,6 +856,109 @@ public:
     }
 };
 ```
+## 游戏对战系列
+
+### 486. 预测赢家
+> 给定一个表示分数的非负整数数组。 玩家 1 从数组任意一端拿取一个分数，随后玩家 2 继续从剩余数组任意一端拿取分数，然后玩家 1 拿，…… 。
+> 每次一个玩家只能拿取一个分数，分数被拿取之后不再可取。直到没有剩余分数可取时游戏结束。最终获得分数总和最多的玩家获胜。 如果最终两个玩家的分数相等，那么玩家 1 仍为赢家
+给定一个表示分数的数组，预测玩家1是否会成为赢家。你可以假设每个玩家的玩法都会使他的分数最大化。
+
+- 两个人交换地从两端取数，进行结果对比，可以进行递归模拟
+  - 由于存在重复子问题，因此可以使用动态规划降低时间复杂度。
+
+- dp定义：`dp[i][j]` 表示i到j之间的取数差值： 当数组剩下的部分为下标 i 到下标 j 时，即在下标范围 [i, j]中，**当前玩家与另一个玩家的分数之差的最大值**，注意当前玩家不一定是先手
+- 状态转移： `dp[i][j] = max(nums[i] - dp[i + 1][j] , nums[j] - dp[i][j-1] )` 分别对应从左侧取i个数， 最后差值为 当前值 - 下一个玩家的取值分差； 以及从右侧取第j个数
+- 时间复杂度 O(N^2) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    bool PredictTheWinner(vector<int>& nums) {
+        int n = nums.size();
+        vector<vector<int>> dp(n, vector<int>(n));
+        // 初始化： [i,i]区间内只能选择拿当前值
+        for (int i = 0; i < n; i++) {
+            dp[i][i] = nums[i];
+        }
+        for (int i = n - 2; i>=0; i--) {
+            for (int j = i + 1; j < n; j++) {
+                dp[i][j] = max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j-1]);
+            }
+        }
+        return dp[0][n-1] >= 0;
+    }
+};
+```
+- 滚动数组操作压缩空间：
+  - 根据数据依赖关系，直接取一列数据即可，因为内外循环的设计方法，不存在覆盖问题，相对来说改动较小
+
+```c++
+class Solution {
+public:
+    bool PredictTheWinner(vector<int>& nums) {
+        int n = nums.size();
+        //vector<vector<int>> dp(n, vector<int>(n));
+        vector<int> dp(n);
+        for (int i = 0; i < n; i++) {
+            // dp[i][i] = nums[i];
+            dp[i] = nums[i];
+        }
+        
+        for (int i = n - 2; i>=0; i--) { // n-2 为了避免溢出
+            for (int j = i + 1; j < n; j++) {
+                //dp[i][j] = max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j-1]);
+                dp[j] = max(nums[i] - dp[j], nums[j] - dp[j-1]);
+            }
+        }
+        //return dp[0][n-1] >= 0;
+        return dp[n-1] >= 0;
+    }
+};
+```
+
+###  877. 石子游戏
+> 偶数堆石子排成一行，每堆都有正整数颗石子 piles[i] 。游戏以谁手中的石子最多来决出胜负。石子的总数是奇数，所以没有平局.
+> 亚历克斯和李轮流进行，亚历克斯先开始。 每回合，玩家从行的开始或结束处取走整堆石头。 这种情况一直持续到没有更多的石子堆为止，此时手中石子最多的玩家获胜。
+假设亚历克斯和李都发挥出最佳水平，当亚历克斯赢得比赛时返回 true ，当李赢得比赛时返回 false 
+
+- 与[LC486.预测赢家]相比，多了两个关键的条件：
+  - 数组的长度是偶数；
+  - 数组的元素之和是奇数，所以没有平局
+- 在以上的限制下，**存在先手优势，即先选的玩家一定能获胜**：
+  - 将石子分成两组之后，可以计算出每一组的石子数量，同时知道哪一组的石子数量更多。\text{Alex}Alex 只要选择取走数量更多的一组石子即可。因此，先选的玩家总是可以赢得比赛
+
+```c++
+class Solution {
+public:
+    bool stoneGame(vector<int>& piles) {
+        int n = piles.size();
+        vector<int> dp(n);
+        for (int i = 0; i < n; i++) {
+            // dp[i][i] = nums[i]; 
+            dp[i] = piles[i];
+        }
+        
+        for (int i = n - 2; i>=0; i--) { // n-2 为了避免溢出
+            for (int j = i + 1; j < n; j++) {
+                //dp[i][j] = max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j-1]);
+                dp[j] = max(piles[i] - dp[j], piles[j] - dp[j-1]);
+            }
+        }
+        return dp[n-1] > 0;
+    }
+};
+```
+
+```c++
+class Solution {
+public:
+    bool stoneGame(vector<int>& piles) {
+        return true;
+    }
+};
+```
+
+
 ## Others
 
 ### 10. 正则表达式 [Hard *]
