--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -24,6 +24,7 @@
   - [11. 盛最多水的容器](#11-盛最多水的容器)
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [85. 最大矩形](#85-最大矩形)
+  - [915. 分割数组](#915-分割数组)
   - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
   - [16. 最接近的三数之和](#16-最接近的三数之和)
   - [18. 四数之和](#18-四数之和)
@@ -992,6 +993,78 @@ public:
 };
 ```
 
+### 915. 分割数组
+> 给定一个数组 A，将其划分为两个连续子数组 left 和 right， 使得：
+left 中的每个元素都小于或等于 right 中的每个元素。
+left 和 right 都是非空的。
+left 的长度要尽可能小。
+在完成这样的分组后返回 left 的长度。可以保证存在这样的划分方法。
+
+- 即在数组中寻找分割位置，完成目标任务 
+  - 基本思路： 利用辅助数组记录每个位置上的leftMax和rightMin值
+  - 从左到右（1开始）比较当前位置上的rightMin 是否大于/等于前一位的leftMax
+  - 时间复杂度 O(N);   空间复杂度O(N)
+
+```c++
+class Solution {
+public:
+    int partitionDisjoint(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> upper(n);
+        vector<int> down(n);
+        for (int i = 0; i < n; i++) {
+            if (i == 0) {
+                upper[i] = nums[0];
+            }
+            else {
+                upper[i] = max(upper[i - 1], nums[i]);
+            } 
+        }
+        for (int i = n - 1; i >= 0; i--) {
+            if (i == n - 1) {
+                down[i] = nums[n-1];
+            }
+            else {
+                down[i] = min(down[i + 1], nums[i]);
+            } 
+        }
+        int ans = 0;
+        for (int i = 1; i < n; i++) {
+            if (down[i] >= upper[i-1]) {
+                return i;
+            }
+        }
+        return ans;
+    } 
+};
+```
+- 优化，**进行一次遍历完成**所有任务：
+  - 仅记录当前位置的左侧最大值leftMax， 和全局最大值：
+  - `allMax`存的是[0, i]的最大值，`pos`是left数组的分界点，`leftMax`存的是left数组[0, pos]的最大值
+  - 当`A[i] < leftMax`时，为了满足**left数组的数必须小于等于right中的数**，必须**将当前A[i]放入left数组**，同时**更新leftMax和pos**
+  - 当 `A[i] = leftMax` 时暂时没必要将A[i]放入left数组，因为我们求的是最小的left
+  - `A[i] >= leftMax`，那么A[i]可以暂时放在right数组，若后面有A[j] < leftMax时才必须将A[i]放入left数组
+- 时间复杂度 O(N);   空间复杂度O(1)
+
+```c++
+class Solution {
+public:
+    int partitionDisjoint(vector<int>& nums) {
+        int n = nums.size();
+        int allMax = nums[0];
+        int leftMax = nums[0];
+        int ans = 0;
+        for (int i = 1; i < n; i++) {
+            allMax = max(allMax, nums[i]);
+            if (leftMax > nums[i]) {
+                leftMax = allMax;
+                ans = i;
+            }
+        }
+        return ans + 1;
+    } 
+};
+```
 ### 15. 三数之和 3Sum [Medium]
 > 从无序数组中找出三个非重复元素和等于目标值
 
