--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -1,6 +1,7 @@
 
 - [基础题目](#基础题目)
   - [二分查找基本模版：](#二分查找基本模版)
+  - [二分查找边界模板：](#二分查找边界模板)
   - [变形题目： X的平方根](#变形题目-x的平方根)
   - [374. 猜数字大小](#374-猜数字大小)
   - [278. 找到第一个错误版本](#278-找到第一个错误版本)
@@ -33,7 +34,7 @@
     - left mid right设置
     - 判断条件设置
 
-```
+```c++
 class Solution {
 public:
     int search(vector<int>& nums, int target) {
@@ -49,7 +50,76 @@ public:
     }
 };
 ```
+### 二分查找边界模板：
+- `lower_bound()` (**第一个等于/大于目标值的位置**)
+- `upper_bound()` (**第一个大于目标值的元素**)
 
+STL标准实现如下： 该种写法非常精妙
+```c++
+int lower_bound(vector<int> array, int size, int key)
+{
+    int first = 0, middle;
+    int half, len;
+    len = size;
+
+    while(len > 0) {
+        half = len >> 1;
+        middle = first + half;
+        if(array[middle] < key) {     
+            first = middle + 1;          
+            len = len-half-1;       //在右边子序列中查找
+        }
+        else
+            len = half;            //在左边子序列（包含middle）中查找
+    }
+    return first;
+}
+```
+
+```c++
+int upper_bound(int *array, int size, int key)
+{
+    int first = 0, len = size-1;
+    int half, middle;
+
+    while(len > 0){
+        half = len >> 1;
+        middle = first + half;
+        if(array[middle] > key)     //中位数大于key,在包含last的左半边序列中查找。
+            len = half;
+        else{
+            first = middle + 1;    //中位数小于等于key,在右半边序列中查找。
+            len = len - half - 1;
+        }
+    }
+    return first;
+}
+```
+
+- 自定义实现的情况
+```c++
+// 查找第一个大于等于x的位置: [l,r]
+int lower_bound(int l, int r, int x) {
+    while (l <= r) {
+        int mid = (l+r)>>1;
+        if (a[mid] < x) l = mid+1;
+        else r = mid-1;
+    }
+    return l;
+}
+```
+
+```c++
+// 查找第一个大于x的位置 [l,r]， 区别在于对待相等情况，遇到相等则继续收缩左边界
+int upper_bound(int l, int r, int x) {
+    while (l <= r) {
+        int mid = l+r>>1;
+        if (a[mid] <= x) l = mid+1;
+        else r = mid-1;
+    }
+    return l;
+}
+```
 
 ### 变形题目： X的平方根
 - 计算平方根的整数部分，往往不是直接利用sqrt进行求解。
