--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -32,6 +32,7 @@
   - [125. 回文串验证](#125-回文串验证)
   - [680. 验证回文串II](#680-验证回文串ii)
   - [132. 分割回文串 II *](#132-分割回文串-ii-)
+  - [647.  回文子串](#647--回文子串)
   - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
@@ -1491,6 +1492,72 @@ public:
     }
 };
 ```
+### 647.  回文子串
+> 给定一个字符串，你的任务是计算这个字符串中有多少个回文子串。具有不同开始位置或结束位置的子串，即使是由相同的字符组成，也会被视作不同的子串.
+
+```
+输入："aaa"
+输出：6
+解释：6个回文子串: "a", "a", "a", "aa", "aa", "aaa"
+```
+- 中心拓展： **设置回文子串的中心位置**， 使用左、右指针进行遍历判断，确定是否为回文子串
+  - 中心点确定： `i/2` `i/2 + i%2` 以覆盖求不同情况
+    - 时间复杂度 $O(N^2)$  空间复杂度 O(1)
+```C++
+class Solution {
+public:
+    int countSubstrings(string s) {
+        if (s.empty()) return 0;
+        int n = s.size();
+        int ans = 0;
+        // 中心拓展方法 - 双指针双向遍历
+        for (int i = 0; i < 2*n; i++) {
+            int l = i/2;
+            int r = i/2 + i % 2;
+            while (l >=0 && r < n && s[l] == s[r]) {
+                l--;
+                r++;
+                ans++;
+            }
+        }
+        return ans;
+    }
+};
+```
+- **动态规划实现：**  先进行回文串的判断，再判断中进行结果更新   
+  - 时间复杂度 $O(N^2)$ 空间复杂度O(1)
+```c++
+class Solution {
+public:
+    int countSubstrings(string s) {
+        if (s.empty()) return 0;
+        int n = s.size();
+        int ans = 0;
+        // 中心拓展方法 - 双指针双向遍历
+        vector<vector<int>> dp(n, vector<int>(n));
+        for (int i = n - 1; i >= 0; i--) {
+            for (int j = i; j < n; j++) {
+                if (i == j) {
+                    dp[i][j] = 1;
+                    ans++;
+                }
+                else if (j - i == 1) {
+                    dp[i][j] = s[i] == s[j];
+                    ans += dp[i][j];
+                }
+                else {
+                    dp[i][j] = dp[i+1][j-1] && (s[i] == s[j]);
+                    ans += dp[i][j];
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+- 其他： o(n) 复杂度的**manacher算法**
+  - 待学习
+
 ### 139. 单词拆分
 > 给定一个非空字符串 s 和一个包含非空单词的列表 wordDict，判定 s 是否可以被空格拆分为一个或多个在字典中出现的单词。
 说明：拆分时可以重复使用字典中的单词。你可以假设字典中没有重复的单词
