--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -59,6 +59,7 @@
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
+  - [513. 找树左下角的值](#513-找树左下角的值)
   - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [617. 合并二叉树](#617-合并二叉树)
@@ -1577,6 +1578,81 @@ public:
         if (!root) 
             return ans;
         dfs(root, 0 );
+        return ans;
+    }
+};
+```
+
+### 513. 找树左下角的值
+> 给定一个二叉树，在树的最后一行找到最左边的值。
+
+
+```
+输入:
+
+        1
+       / \
+      2   3
+     /   / \
+    4   5   6
+       /
+      7
+
+输出:
+7
+```
+- 与[LC二叉树的右视图]有相似之处
+- 解题思路： 递归方式：dfs 还是选择层次搜索 bfs 
+  - 递归方式： 使用**临时变量 + 深度**进行数据保存限制，每次仅保存首次遍历到的元素即每行的最左边元素
+  - 时间复杂度： O(N) 空间复杂度O(1)
+```c++
+class Solution {
+public:
+    int depth = 0;
+    int ans;
+    void helper(TreeNode* root, int level) {
+        if (root == nullptr) return;
+        if (depth == level) {
+            depth++;
+            ans = root -> val;
+        }
+        helper(root -> left, level+1);
+        helper(root -> right, level + 1);
+    }
+    int findBottomLeftValue(TreeNode* root) {
+        helper(root, 0);
+        return ans;
+    }
+};
+```
+
+- bfs层次遍历实现： 
+  - 时间复杂度 O(N) 空间复杂度 O(1)
+
+```c++
+class Solution {
+public:
+    int findBottomLeftValue(TreeNode* root) {
+        queue<TreeNode*> q;
+        if (root == nullptr) return 0;
+        q.push(root);
+        int ans = 0;
+        while (!q.empty()) {
+            int sz = q.size();
+            for (int i = 0; i < sz; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                if (i == 0) {
+                    ans = cur -> val;
+                }
+                if (cur -> left) {
+                    q.push(cur -> left);
+                }
+                if (cur -> right) {
+                    q.push(cur -> right);
+                }
+            }            
+        }
         return ans;
     }
 };
