--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -10,6 +10,7 @@
   - [38.外观数列](#38外观数列)
   - [43. 字符串相乘](#43-字符串相乘)
   - [415. 字符串相加](#415-字符串相加)
+  - [67. 二进制求和](#67-二进制求和)
   - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
   - [补充. 36进制加法 [字节]](#补充-36进制加法-字节)
   - [306. 累加数](#306-累加数)
@@ -351,6 +352,40 @@ public:
         }
         if (pre) {
             res.push_back('1');
+        }
+        reverse(res.begin(), res.end());
+        return res;
+    }
+};
+```
+
+###  67. 二进制求和
+> 给你两个二进制字符串，返回它们的和（用二进制表示）。
+输入为 非空 字符串且只包含数字 1 和 0。
+
+```
+输入: a = "11", b = "1"
+输出: "100"
+```
+- 字符串加和的变种，直接实现即可
+```c++
+class Solution {
+public:
+    string addBinary(string a, string b) {
+        int plus = 0;
+        int p1 = a.size() - 1;
+        int p2 = b.size() - 1;
+        string res;
+        while (p1 >= 0 || p2 >= 0) {
+            int x = p1 >= 0 ? a[p1--] - '0': 0;
+            int y = p2 >= 0 ? b[p2--] - '0' : 0;
+            int tmp = x + y + plus;
+            plus = tmp / 2;
+            int cur = tmp % 2;
+            res.push_back(cur + '0');
+        }
+        if (plus) {
+            res.push_back(plus + '0');
         }
         reverse(res.begin(), res.end());
         return res;
