--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -8,6 +8,7 @@
   - [前言](#前言)
 - [查找节点](#查找节点)
   - [2. 两数相加](#2-两数相加)
+  - [445. 两数相加 II](#445-两数相加-ii)
   - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
   - [138. 复制带随机指针的链表](#138-复制带随机指针的链表)
   - [141. 环形链表操作](#141-环形链表操作)
@@ -67,12 +68,11 @@
 ## 查找节点
 
 ### 2. 两数相加
-> 给你两个 **非空** 的链表，表示两个非负的整数。它们每位数字都是按照 逆序 的方式存储的，并且每个节点只能存储 一位数字
+> 给你两个 **非空** 的链表，表示两个非负的整数。它们每位数字都是按照 **逆序** 的方式存储的，并且每个节点只能存储 一位数字
 
 - 采用原地相加的方式进行，**从低位向高位加，需要注意的是向高位增加的1的处理，最后可能需要开辟新空间来存储**
-
-
-```
+    - 不需要链表的reverse
+```c++
 class Solution {
 public:
     ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
@@ -107,6 +107,134 @@ public:
             p -> next = f;
         }
         return phead -> next;
+    }
+};
+```
+### 445. 两数相加 II
+> 两个 非空 链表来代表两个非负整数。**数字最高位位于链表开始位置**。它们的每个节点只存储一位数字。将这两数相加会返回一个新的链表。
+- 对于相加操作而言，是逆序操作，需要进行链表reverse操作
+    - 先将两个链表reverse，完成翻转后再进行基本的链表相加操作
+    - 时间复杂度O(N) 涉及三次翻转
+- 鉴于题目不允许直接翻转链表，需要设计更合理的方法：
+  - **考虑使用栈结构来对元素进行存储**
+  - 通过出栈过程进行等位计算
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+//    ListNode* reverseList(ListNode* head) {
+//         ListNode* prev = nullptr;
+//         ListNode* next = nullptr;
+//         while (head != nullptr) {
+//             next = head -> next;
+//             head -> next = prev;
+//             prev = head;
+//             head = next;
+//         }
+//         return prev;
+//     }
+    ListNode* reverseList(ListNode* head) {
+        if (head == nullptr || head -> next == nullptr) return head;
+        ListNode* p = reverseList(head -> next);
+        head -> next -> next = head;
+        head -> next = nullptr;
+        return p;
+    }
+    ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
+        if (l1 == nullptr) return l2;
+        if (l2 == nullptr) return l1;
+        ListNode* p1 = reverseList(l1);
+        ListNode* p2 = reverseList(l2);
+        cout << p1 -> val << " " << p2 -> val << endl;
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        int plus = 0;
+        while (p1 != nullptr || p2 != nullptr) {
+            int a = p1 != nullptr ? p1 -> val : 0;
+            int b = p2 != nullptr ? p2 -> val : 0;
+            int tmp = a + b + plus;
+            int cur = tmp % 10;
+            plus = tmp / 10;
+
+            if (p1 != nullptr) {
+                p1 -> val = cur;
+                p -> next = p1;
+            }
+            else {
+                p2 -> val = cur;
+                p -> next = p2;
+            }
+            if (p1 != nullptr) p1 = p1 -> next;
+            if (p2 != nullptr) p2 = p2 -> next;
+            p = p -> next;
+        }
+        if (plus) {
+            ListNode* hi = new ListNode(plus);
+            p -> next = hi;
+        }
+        return reverseList(phead -> next);
+    }
+};
+```
+- **基于栈的方式实现：** 空间复杂度O(N) 高于基于翻转完成的算法
+  - 且从写法上将上面的原地加和方式也比较有技巧性 
+```c++
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        if (head == nullptr || head -> next == nullptr) return head;
+        ListNode* p = reverseList(head -> next);
+        head -> next -> next = head;
+        head -> next = nullptr;
+        return p;
+    }
+    ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
+        if (l1 == nullptr) return l2;
+        if (l2 == nullptr) return l1;
+        stack<int> s1;
+        stack<int> s2;
+        while (l1 != nullptr) {
+            s1.push(l1 -> val);
+            l1 = l1 -> next;
+        }
+        while (l2 != nullptr) {
+            s2.push(l2 -> val);
+            l2 = l2 -> next;
+        }
+        int plus = 0;
+        ListNode* prev = nullptr;
+        while (!s1.empty() || !s2.empty()) {
+            int a = 0;
+            int b = 0;
+            if (!s1.empty()) {
+                a = s1.top();
+                s1.pop();
+            }
+            if (!s2.empty()) {
+                b = s2.top();
+                s2.pop();
+            }
+            int tmp = a + b + plus;
+            plus = tmp/10;
+            ListNode* cur = new ListNode(tmp % 10);
+            cur -> next = prev; 
+            prev = cur;
+        }
+        if (plus) {
+            ListNode* cur = new ListNode(plus);
+            cur -> next = prev;
+            prev = cur;
+        }
+        return prev;
     }
 };
 ```
@@ -801,7 +929,7 @@ public:
   3. 总体看：将问题简化为两步操作，将链表分为head和head后的链表，假定head后的链表已递归反转，然后再将head进行连接。
 
 https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484467&idx=1&sn=beb3ae89993b812eeaa6bbdeda63c494&chksm=9bd7fa3baca0732dc3f9ae9202ecaf5c925b4048514eeca6ac81bc340930a82fc62bb67681fa&scene=21#wechat_redirect
-```
+```c++
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
