--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -33,6 +33,7 @@
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
   - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
+  - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
   - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
@@ -487,6 +488,58 @@ public:
     }
 };
 ```
+###  429. N叉树的层序遍历
+> 给定一个 N 叉树，返回其节点值的层序遍历。（即从左到右，逐层遍历）。
+
+- bfs 基于队列实现
+- 时间复杂度 O(N) 空间复杂度 O(N)
+```c++
+/*
+// Definition for a Node.
+class Node {
+public:
+    int val;
+    vector<Node*> children;
+
+    Node() {}
+
+    Node(int _val) {
+        val = _val;
+    }
+
+    Node(int _val, vector<Node*> _children) {
+        val = _val;
+        children = _children;
+    }
+};
+*/
+class Solution {
+public:
+    vector<vector<int>> levelOrder(Node* root) {
+        vector<vector<int>> res;
+        if (root == nullptr) return res;
+        queue<Node*> q;
+        q.push(root);
+        while (!q.empty()) {
+            int sz = q.size();
+            vector<int> level(sz);
+            for (int i = 0; i < sz; i++) {
+                Node* cur = q.front();
+                q.pop();
+                level[i] = cur -> val;
+                for (auto p : cur -> children) {
+                    if (p) {
+                        q.push(p);
+                    } 
+                }
+            }
+            res.push_back(level);
+        }
+        return res;
+    }
+};
+```
+
 ### 98. 验证二叉搜索树 [*]
 
 - 涉及基本的二叉树遍历以及二叉搜索树性质
