--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -29,6 +29,7 @@
   - [16. 最接近的三数之和](#16-最接近的三数之和)
   - [18. 四数之和](#18-四数之和)
   - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
+  - [80. 删除有序数组的重复项II](#80-删除有序数组的重复项ii)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
   - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
   - [27. 移除元素](#27-移除元素)
@@ -1243,6 +1244,39 @@ public:
             else {
                 nums[left] = nums[i];
                 left++;
+            }
+        }
+        return left;
+    }
+};
+```
+
+### 80. 删除有序数组的重复项II
+> 一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 **最多出现两次** ，返回删除后数组的新长度
+```
+输入：nums = [0,0,1,1,1,1,2,3,3]
+输出：7, nums = [0,0,1,1,2,3,3]
+```
+- 区别于[LC26.]这里添加了额外的限制条件：**最多出现两次**
+- 在双指针的基础上，**加上计数变量**进行重复出现次数的统计即可
+  - 注意计数变量的更新设置
+
+```c++
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+        int left = 1;  
+        int count = 1; // 计数变量
+        if (nums.empty()) return 0;
+        for (int i = 1; i < nums.size(); i++) {
+            if (nums[i - 1] == nums[i] && count == 1) {
+                nums[left] = nums[i];
+                left++;
+                count++;
+            }
+            if (nums[i - 1] != nums[i]) {
+                count = 1;
+                nums[left++] = nums[i];
             }
         }
         return left;
