--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -120,6 +120,11 @@ int upper_bound(int l, int r, int x) {
     return l;
 }
 ```
+- 需要特别注意的是： `l <= r` 还是 `l < r` 
+  - **两种情况在临界情况下的结果不同**
+  - 当列表长度为1是， `l<r`的循环不会被执行： 直接`return 0`
+  - 而`l<=r`的循环下还会执行一次，可能得到`return 1`
+  - 在实际写代码中需要这个临界条件的影响
 
 ### 变形题目： X的平方根
 - 计算平方根的整数部分，往往不是直接利用sqrt进行求解。
