--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -1,5 +1,7 @@
 - [进阶](#进阶)
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
+  - [496. 下一个更大元素 I](#496-下一个更大元素-i)
+  - [503. 下一个更大元素 II](#503-下一个更大元素-ii)
   - [556. 下一个更大元素 III](#556-下一个更大元素-iii)
   - [670. 最大交换](#670-最大交换)
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
@@ -68,6 +70,80 @@ public:
     }
 };
 ```
+### 496. 下一个更大元素 I
+> 两个 没有重复元素 的数组 nums1 和 nums2 ，其中nums1 是 nums2 的子集。
+请你找出 nums1 中每个元素在 nums2 中的下一个比其大的值。
+nums1 中数字 x 的下一个更大元素是指 x 在 nums2 中对应位置的右边的第一个比 x 大的元素。如果不存在，对应位置输出 -1
+
+
+- next greater 问题
+- **一般使用单调栈进行解决** [LC739.每日温度]解题一致
+  - 从栈底到栈顶单调递减**单调递减栈**；单调栈保存数组索引，当遇到比当前栈顶元素大的值时进行出栈操作，并更新结果
+  - 本题涉及两个数组，需要使用哈希表来进行一个结果索引的映射
+- 时间复杂度  O(N) 空间复杂度 O(N)
+
+
+```c++
+class Solution {
+public:
+    vector<int> nextGreaterElement(vector<int>& nums1, vector<int>& nums2) {
+        unordered_map<int, int> map1;
+        stack<int> st;
+        vector<int> res(nums1.size(),-1);
+        for (int i = 0; i < nums1.size(); i++) {
+            map1[nums1[i]] = i;
+        }
+    
+        for (int i = 0; i < nums2.size(); i++) {
+            while (!st.empty() && nums2[st.top()] < nums2[i]) {
+                if (map1.count(nums2[st.top()]) > 0) {
+                    int index = map1[nums2[st.top()]];
+                    res[index] = nums2[i];
+                }
+                st.pop();
+            }
+            st.push(i);
+        }
+        return res;
+    }
+};
+```
+### 503. 下一个更大元素 II
+>**一个循环数组**（最后一个元素的下一个元素是数组的第一个元素），输出每个元素的下一个更大元素。数字 x 的下一个更大的元素是按数组遍历顺序，这个数字之后的第一个比它更大的数，这意味着你应该循环地搜索它的下一个更大的数。如果不存在，则输出 -1。
+
+```
+输入: [1,2,1]
+输出: [2,-1,2]
+```
+- 与[LC496]的主要区别在于循环数组，使得元素可以双向对比
+- 对该题进行简单转换，将数组进行二倍展开，使得每个元素可以与右侧元素进行重复对比；
+  - 使用取模操作进行元素拓展访问
+  - 只需要添加一点小改动即可
+- 时间复杂度 O(N)  空间复杂度 O(N)
+- 关键点： **`单调栈 + 循环数组访问`**
+
+```c++
+class Solution {
+public:
+    vector<int> nextGreaterElements(vector<int>& nums) {
+        vector<int> res(nums.size(), -1);
+        stack<int> st;
+        int n = nums.size();
+        // 对循环数组进行展开， 通过取模操作进行循环访问
+        for (int i = 0; i < 2*n; i++) {
+            while (!st.empty() && nums[st.top()] < nums[i % n]) {
+                res[st.top()] = nums[i % n];
+                st.pop();
+            }
+            st.push(i%n);
+        }
+        return res;
+    }
+};
+```
+
+
+
 
 ### 556. 下一个更大元素 III 
 > 正整数 n ，请你找出符合条件的最小整数，其由重新排列 n 中存在的每位数字组成，并且其值大于 n 。如果不存在这样的正整数，则返回 -1 。
