[topic] add tree points

--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,10 +31,10 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
-  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
@@ -46,22 +46,24 @@
   - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
   - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
   - [114. 二叉树展开为链表](#114-二叉树展开为链表)
-  - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
+  - [补充题：二叉树的下一个节点](#补充题二叉树的下一个节点)
+  - [235. 二叉搜索树的最近公共祖先](#235-二叉搜索树的最近公共祖先)
+  - [236. 二叉树的最近公共祖先](#236-二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
   - [530. 二叉搜索树的最小绝对差](#530-二叉搜索树的最小绝对差)
   - [654. 最大二叉树](#654-最大二叉树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [513. 找树左下角的值](#513-找树左下角的值)
-  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
@@ -1056,9 +1058,127 @@ public:
 };
 ```
 
+### 补充题：二叉树的下一个节点
+> 即二叉树的后继节点： 二叉树中一个节点的后继节点指的是，二叉树的中序遍历的序列中的下一个节点。
+```
+链接：https://www.nowcoder.com/questionTerminal/c37ec6a9e4084b9c943be2d3a369e177
+来源：牛客网
+
+第一行输入两个整数 n 和 root，n 表示二叉树的总节点个数，root 表示二叉树的根节点。
+
+以下 n 行每行四个整数 fa，lch，rch，表示 fa 的左儿子为 lch，右儿子为 rch。(如果 lch 为 0 则表示 fa 没有左儿子，rch同理)
+
+最后一行输入要询问的节点 node
+```
+- 经典的二叉树遍历问题，对于一个节点的下一个后继节点，有多种情况，需要清楚考虑：
+  - https://mp.weixin.qq.com/s/yewlHvHSilMsrUMFIO8WAA
+  - 若x有右子树。则x的下一个节点为x右子树最左侧节点。如，2的下一个节点为8。
+  - 若x没有右子树，又分为2种情况。
+    - **若x是父节点的左孩子**。则x的父节点就是x的下一个节点。如，7的下一个节点是4。
+    - **若x是父节点的右孩子**。则沿着父节点向上，直到找到一个节点的父节点的左孩子是该节点，则该节点的父节点就是x的下一个节点。如，9的下一个节点是1。
+  
+![avatar](next.png)
+```c++
+#include<iostream>
+#include<map>
+using namespace std;
+
+struct TreeNode{
+    TreeNode* parent;
+    TreeNode* left;
+    TreeNode* right;
+    int val;
+    TreeNode(int v) {
+        val = v;
+        parent = left = right = nullptr;
+    }
+};
+
+TreeNode* getNext(TreeNode* node) {
+    if (node == nullptr) return nullptr;
+    if (node -> right != nullptr) {
+        // 右子树不为空
+        // 搜索右子树的最左节点
+        TreeNode* cur = node -> right;
+        while (cur -> left != nullptr) {
+            cur = cur -> left;
+        }
+        return cur;
+    }
+    else {
+        // 右子树为空， 在左子树及根节点中进行搜索
+        // 当前节点在左子树的右节点上 需要往上搜索到下一个根节点
+        // 或者 当前节点在左子树的左节点上 直接访问父节点即可
+        while (node -> parent != nullptr && node -> parent -> left != node) {
+            node = node -> parent;
+        }
+        return node -> parent; // 最后要返回node-> parent
+        // 因为上面的遍历最后只能遍历到 根节点的左节点或者空节点上
+    }
+}
+
+int main(){
+    int n,rootval;
+    cin>>n>>rootval;
+    map<int,TreeNode*> mp;
+    mp[0] = nullptr;
+    for (int i=0; i<n; i++){
+        int pa,lc,rc;
+        cin >> pa >> lc >> rc;
+        if (!mp.count(pa)) mp[pa] = new TreeNode(pa);
+        if (!mp.count(lc)) mp[lc] = new TreeNode(lc);
+        if (!mp.count(rc)) mp[rc] = new TreeNode(rc);
+        mp[pa]->left = mp[lc];
+        mp[pa]->right = mp[rc];
+        if (mp[lc] != nullptr) mp[lc]->parent = mp[pa];
+        if (mp[rc] != nullptr) mp[rc]->parent = mp[pa];
+    }
+    int visit;
+    cin >> visit;
+    TreeNode* nextNode = getNext(mp[visit]);
+    int res = nextNode == nullptr? 0:nextNode->val;
+    cout << res << endl;
+    return 0;
+}
+```
 
 
-### 二叉树的最近公共祖先
+### 235. 二叉搜索树的最近公共祖先
+> 给定一个二叉搜索树, 找到该树中两个指定节点的最近公共祖先。
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个结点 p、q，最近公共祖先表示为一个结点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+
+- 根据二叉搜索树的特性，可以先判断两个目标节点的分布情况：
+  - 都位于同一子树： 递归到子树中再判断
+  - 分别位于左/右子树： 直接返回当前root节点即可
+
+- 当然也可以采用与[LC236.]的通用写法
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+
+class Solution {
+public:
+    TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
+        // 在同一侧进行递归搜索
+        while (root != nullptr && (root -> val - p -> val) * (root -> val - q -> val) > 0) {
+            root = (root -> val - p -> val) > 0 ? root -> left : root -> right;
+        } 
+        return root;
+    }
+};
+```
+
+
+### 236. 二叉树的最近公共祖先
 - 通过遍历实现，考虑二叉树节点的分布情况差异：
   - **后序遍历** 自底而上的判断逻辑
   - 两个节点分布在左右子树中，最近公共祖先为root
@@ -1496,7 +1616,7 @@ public:
   - 具体来说，添加pre 和 head两个指针，来完成节点间的关联
   - 时间复杂度 O（N） 空间复杂度 O(N)
 
-```
+```c++
 class Solution {
 public:
     Node* pre = nullptr;
