--- a/topics/T6-树结构中的指针问题.md
+++ b/topics/T6-树结构中的指针问题.md
@@ -336,7 +336,7 @@ public:
     - **若x是父节点的左孩子**。则x的父节点就是x的下一个节点。如，7的下一个节点是4。
     - **若x是父节点的右孩子**。则沿着父节点向上，直到找到一个节点的父节点的左孩子是该节点，则该节点的父节点就是x的下一个节点。如，9的下一个节点是1。
   
-![avatar](next.png)
+![avatar](./../leetcode/树结构/next.png)
 ```c++
 #include<iostream>
 #include<map>
