--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -50,6 +50,7 @@
   - [补充. 01串问题](#补充-01串问题)
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
   - [468. 验证IP地址](#468-验证ip地址)
+  - [767. 重构字符串](#767-重构字符串)
   - [1044. 最长重复子串*](#1044-最长重复子串)
 
 <!-- /code_chunk_output -->
@@ -2450,7 +2451,53 @@ public:
 ```
 
 
+### 767. 重构字符串
+> 给定一个字符串S，检查是否能重新排布其中的字母，使得两相邻的字符不同。若可行，输出任意可行的结果。若不可行，返回空字符串
 
+- **贪心大法好**
+- 本题初看没有什么思路，再看还是没有思路
+- 随便画画感觉应该不是复杂题目，可以通过贪心的方式来做
+  - 首先计算字符串元素的频率情况
+  - 此处有个重要的公式： 当最大频次`x` `x > (n+1)//2`时是无法构成目标字符串的。即`2*maxFreq - 1 > n`
+  - 排除了无法构成的情况后，如何贪心地选择一个合法结果呢？
+    - 对频次进行排序，从大到小
+    - 从高频的字符开始往字符串中间隔插入字符(`idx+=2`)，插入时从奇数位开始插入(即`idx = 0`)
+    - 当奇数位置插满后往偶数位置插入，即能保证最后的结果正确
+- 关键点： **`贪心 + 频次排序`**
+- 主要难点在于**非法情况的判断+插入的方式设置**
+
+```c++
+class Solution {
+public:
+    struct cmp {
+        bool operator()(const pair<char, int> a, const pair<char, int> b) {
+            return a.second > b.second; // 降序排列
+        }
+    };
+    string reorganizeString(string s) {
+        unordered_map<char, int> freqs;
+        int maxFreq = 0;
+        for (auto p : s) {
+            freqs[p]++;
+            maxFreq = max(maxFreq, freqs[p]);
+        }
+        
+        if (2 * maxFreq - 1 > s.size()) return "";
+        vector<pair<char, int>> vecs(freqs.begin(), freqs.end());
+        sort(vecs.begin(), vecs.end(), cmp()); // 频率降序排列
+        string res(s);
+        int index = 0;
+        for (int i = 0; i < vecs.size(); i++) {
+            while (vecs[i].second--) {
+                res[index] = vecs[i].first;
+                index += 2;
+                if (index >= s.size()) index = 1; // 奇数位置插满后 从偶数开始
+            } 
+        }
+        return res;
+    }
+};
+```
 
 ### 1044. 最长重复子串*
 > 给出一个字符串 S，考虑其所有重复子串（S 的连续子串，出现两次或多次，可能会有重叠)。返回任何具有最长可能长度的重复子串。（如果 S 不含重复子串，那么答案为 ""。）
