--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -20,6 +20,7 @@
   - [168. Excel表列名称](#168-excel表列名称)
   - [171. Excel表列序号](#171-excel表列序号)
   - [405. 数字转十六进制](#405-数字转十六进制)
+  - [421. 数组中两个数的最大异或值](#421-数组中两个数的最大异或值)
 - [双指针技巧](#双指针技巧)
   - [11. 盛最多水的容器](#11-盛最多水的容器)
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
@@ -834,6 +835,51 @@ public:
 };
 ```
 
+### 421. 数组中两个数的最大异或值
+
+> 给你一个整数数组 nums ，返回 nums[i] XOR nums[j] 的最大运算结果，其中 0 ≤ i ≤ j < n 。
+进阶：你可以在 O(n) 的时间解决这个问题吗？
+
+- 暴力法：两层迭代显然超时
+- 这个地方要用到xor的性质：
+  - `a^b=c` => `a^c=b`
+  - 我们借助贪心的思想，直接寻找最大异或值
+  - 从高位开始假设最大异或值`x`当前位为1，通过上面的性质，判断给定数组里面是否存在符号条件的值\
+    - `prefixs.count((nums[j] & mask) ^ tmp) > 0`
+  - 借助掩码来获取指定位置的前缀情况
+  - 32位，从高位遍历值低位，最后得到目标值
+  - 每次先假设当前位可以取1: `int tmp = res | (1 << i);`
+- 时间复杂度 O(N) 32次遍历
+- 关键点： **`xor性质利用+掩码前缀`**
+
+
+```c++
+class Solution {
+public:
+    int findMaximumXOR(vector<int>& nums) {
+        int N = nums.size();
+        int res = 0;
+        int mask = 0;
+        for (int i = 31; i >= 0; i--) {
+            mask |= (1 << i);
+            int tmp = res | (1 << i);
+            unordered_set<int> prefixs;
+            for (int j = 0; j < N; j++) {
+                // 利用xor的性质 a ^ b = c ==> a ^ c = b
+                if (prefixs.count((nums[j] & mask) ^ tmp) > 0) {
+                    res = tmp;
+                    break;
+                }
+                else {
+                    // 保留每个值的当前前缀
+                    prefixs.insert(nums[j] & mask);
+                }
+            }
+        }
+        return res;
+    }
+};
+```
 
 ## 双指针技巧
 
