--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,10 +31,11 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
-  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树)
+  - [222. 完全二叉树的节点个数](#222-完全二叉树的节点个数)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
@@ -55,15 +56,15 @@
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [513. 找树左下角的值](#513-找树左下角的值)
-  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
@@ -371,7 +372,7 @@ public:
 - 二叉树遍历问题： BFS/DFS
 - 基于DFS思想，计算左右子树的深度，取两子树的最大深度; 时间复杂度O(n) 空间复杂度O(depth)
 
-```
+```c++
 /**
  * Definition for a binary tree node.
  * struct TreeNode {
@@ -541,6 +542,45 @@ public:
     }
 };
 ```
+### 222. 完全二叉树的节点个数
+> 给你一棵 完全二叉树 的根节点 root ，求出该树的节点个数。
+完全二叉树 的定义如下：在完全二叉树中，除了最底层节点可能没填满外，其余每层节点数都达到最大值，**并且最下面一层的节点都集中在该层最左边的若干位置**。若最底层为第 h 层，则该层包含 1~ 2h 个节点。
+
+- 完全二叉树与满二叉树： 
+  - 满二叉树是每层都填满的二叉树：节点总数为:$2^{h} - 1$ 根节点深度为1
+
+- 计算节点数量的基本做法即通过后序遍历进行相加： 时间复杂度O(N)
+  - 本题需要考虑完全二叉树的特性：
+  - 将满二叉树和普通二叉树遍历相结合
+  - 先进行满二叉树判断，如果是满二叉树则直接用公式计算；
+  - 不是的话继续递归即可
+- 时间复杂度分析： O(logNlogN)
+  - 树的高度： logN 不是每个节点都会遍历，所以不是O(N) 而是O(logN)
+  - 每次递归复杂度为O(logN)
+```c++
+class Solution {
+public:
+    int countNodes(TreeNode* root) {
+        if (!root) return 0;
+        TreeNode* rl = root;
+        TreeNode* rr = root;
+        int hl = 0, hr = 0;
+        while (rl != nullptr) {
+            rl = rl -> left;
+            hl++;
+        }
+        while(rr != nullptr) {
+            rr = rr -> right;
+            hr++;
+        }
+        if (hr == hl) {// 满二叉树的情况下
+            return pow(2, hr) - 1;
+        }
+        return 1 + countNodes(root -> left) + countNodes(root -> right);
+    }
+};
+```
+
 
 ### 98. 验证二叉搜索树 [*]
 
