--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -6,6 +6,7 @@
   - [670. 最大交换](#670-最大交换)
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
+  - [Offer 53 - II. 0～n-1中缺失的数字](#offer-53---ii-0n-1中缺失的数字)
   - [442. 数组中重复的数据](#442-数组中重复的数据)
   - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
   - [60. 排列序列](#60-排列序列)
@@ -291,6 +292,55 @@ public:
     }
 };
 ```
+###  Offer 53 - II. 0～n-1中缺失的数字
+> 一个长度为n-1的**递增排序数组**中的所有数字都是唯一的，
+> 并且每个数字都在范围0～n-1之内。在范围0～n-1内的n个数字中有且只有一个数字不在该数组中，请找出这个数字
+
+- **排序数组中的搜索问题，首先想到 二分法 解决**
+- 递增数组，可以利用二分搜索来快速求解，但参照[LC41.]写也行hh
+  - 二分法：判断索引值与对应存储值是否相等，不相等则向左搜，相等则向右搜
+  - 时间复杂度 O(logN) 
+```C++
+class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        int n = nums.size();
+        int left = 0;
+        int right = n - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] == mid) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+};
+```
+
+```c++
+class Solution {
+public:
+    int missingNumber(vector<int>& nums) {
+        int n = nums.size();
+        for (int i = 0; i < n; i++) {
+            while (nums[i] < n && nums[i] >= 0 && nums[i] != i) {
+                swap(nums[i], nums[nums[i]]);
+            }
+        }
+        for (int i = 0; i < n; i++) {
+            if (nums[i] != i) 
+                return i;
+        }
+        return nums.size();
+    }
+};
+
+```
+
 ### 442. [数组中重复的数据](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/)
 > 给定一个整数数组 a，其中1 ≤ a[i] ≤ n （n为数组长度）, 其中有些元素出现两次而其他元素出现一次。**找到所有出现两次的元素**。
 
