--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -38,6 +38,7 @@
   - [88. 合并两个有序数组](#88-合并两个有序数组)
   - [349. 两个数组的交集](#349-两个数组的交集)
   - [350. 两个数组的交集II](#350-两个数组的交集ii)
+  - [977. 有序数组的平方](#977-有序数组的平方)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
   - [36. 有效的数独](#36-有效的数独)
@@ -1121,7 +1122,7 @@ public:
     - 外层循环和内层循环都需要进行重复区域的跳过
 - 时间复杂度 `O(N^2)` 空间复杂度 O(logN) 排序所需
 - 关键点： **`双指针 `**   **`避免重复`** 
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> ans;
@@ -1441,7 +1442,7 @@ public:
 - 思路2： 使用双指针，借助额外空间存储a，双指针合并
 - 思路3:  **逆向双指针，从后往前遍历**，将最大值往a的尾部填充
     - 最后将未合并的部分再添加到a中即可
-```
+```c++
 class Solution {
 public:
     void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
@@ -1608,7 +1609,41 @@ public:
         }
 };
 ```
+### 977. 有序数组的平方
+> 给你一个按 非递减顺序 排序的整数数组 nums，返回 每个数字的平方 组成的新数组，要求也按 非递减顺序 排序
 
+```
+输入：nums = [-4,-1,0,3,10]
+输出：[0,1,9,16,100]
+```
+- **双指针方法：**
+  - 左右指针边界；以及终止条件： 能不能相等：
+  - `left < right` or `left <= right`
+  - 根据所求结果决定
+```c++
+class Solution {
+public:
+    vector<int> sortedSquares(vector<int>& nums) {
+        vector<int> ans(nums.size());
+        int left = 0;
+        int right = nums.size() - 1;
+        int index = right;
+        // 双指针能不能取等号
+        while (left <= right) {
+            if ( -nums[left] <= nums[right]) {
+                ans[index] = nums[right] * nums[right];
+                right--;
+            }
+            else {
+                ans[index] = nums[left] * nums[left];
+                left++;
+            }
+            index--;
+        }
+        return ans;
+    }
+};
+```
 ## 哈希表技巧
 ### 1. 两数之和
 给定数组和目标，找出数组两元素之和为target的元素索引
