--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,16 +31,17 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
   - [222. 完全二叉树的节点个数](#222-完全二叉树的节点个数)
-  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
 - [树的构建](#树的构建)
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
+  - [109. 有序链表转换为二叉搜索树](#109-有序链表转换为二叉搜索树)
   - [106.从中序和后序中构建二叉树](#106从中序和后序中构建二叉树)
   - [先序加中序构建二叉树](#先序加中序构建二叉树)
   - [889. 先序加后序构建二叉树](#889-先序加后序构建二叉树)
@@ -51,20 +52,21 @@
   - [235. 二叉搜索树的最近公共祖先](#235-二叉搜索树的最近公共祖先)
   - [236. 二叉树的最近公共祖先](#236-二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
+  - [449. 序列化和反序列化二叉搜索树](#449-序列化和反序列化二叉搜索树)
   - [530. 二叉搜索树的最小绝对差](#530-二叉搜索树的最小绝对差)
   - [654. 最大二叉树](#654-最大二叉树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [513. 找树左下角的值](#513-找树左下角的值)
-  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
@@ -835,7 +837,7 @@ public:
 ## 树的构建
 ### 108. 有序数组转搜索二叉树 [KEY]
 
-- 要求左右子树高度平衡，即需要选择数组中间位置的数字作为根节点
+- **要求左右子树高度平衡**，即需要选择数组中间位置的数字作为根节点
     当数组长度为奇数或者偶数时，存在差异：对于偶数时需要考虑选择偏左位置还是偏右位置的作为根节点，两者没有效果差异
 - 通过递归形式，进行转换
 
@@ -862,7 +864,64 @@ public:
 ```
 ![avatar](./108-01.png)
 
+### 109. 有序链表转换为二叉搜索树
+> 给定有序升序单向链表，构建高度平衡二叉搜索树
 
+- 与[LC108.]基本相似，差异在于堆有序链表如何处理，如何寻找中点，然后再进行后续递归呢？
+  - **通过快慢指针，进行中点确定**
+  - 并考虑到后续分段递归的链表情况，需要将中点节点从原链表中隔开
+  - 并考虑对于长度为1的链表的特殊情况，避免陷入死循环： `head != mid`
+- 关键点： **`有序链表的中点确定`**
+
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* findMid(ListNode* head) {
+        ListNode* slow = head;
+        ListNode* fast = head;
+        ListNode* prev = nullptr;
+        while (fast != nullptr && fast -> next != nullptr) {
+            fast = fast -> next -> next;
+            prev = slow;
+            slow = slow -> next;
+        }
+        if (prev != nullptr)
+            prev -> next = nullptr;
+        return slow;
+    }
+    TreeNode* sortedListToBST(ListNode* head) {
+        if (head == nullptr) return nullptr;
+        ListNode* mid = findMid(head);
+        TreeNode* root = new TreeNode(mid -> val);
+        if (head != mid) { // 终止递归的重要条件
+            root -> left = sortedListToBST(head);
+            root -> right = sortedListToBST(mid -> next);
+        }
+        return root;
+    }
+};
+```
 
 ### 106.从中序和后序中构建二叉树
 - 寻找根节点位置，并确定根节点在何处划分左右子树
@@ -1319,6 +1378,81 @@ public:
     }
 };
 ```
+
+### 449. 序列化和反序列化二叉搜索树
+- 采用先序遍历的方式进行序列和反序列化
+- **其中在反序列化中使用了stringstream来进行简化代码，结合getline直接进行分割处理**
+    - `std::getline(ss, curr, ',')`
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Codec {
+public:
+    void ser(TreeNode* root, string& s) {
+        if (!root) {
+            s.push_back('#');
+            s.push_back(',');
+            return;
+        } 
+        string v = to_string(root -> val);
+        s += v;
+        s += ",";
+        ser(root -> left, s);
+        ser(root -> right, s);
+    }
+    // Encodes a tree to a single string.
+    string serialize(TreeNode* root) {
+        string res;
+        ser(root, res);
+        return res;
+    }
+
+    TreeNode* deser(queue<string>& datas) {
+        if (datas.empty()) return nullptr;
+        string cur = datas.front();
+        datas.pop();
+        if (cur == "#") {
+            return nullptr;
+        }
+        TreeNode* root = new TreeNode(stoi(cur));
+        root -> left = deser(datas);
+        root -> right = deser(datas);
+        return root;
+    }
+
+    // Decodes your encoded data to tree.
+    TreeNode* deserialize(string data) {
+        queue<string> datas;
+        stringstream ss(data);
+        string curr;
+        // 使用stream中的流进行间隔处理
+        while (std::getline(ss, curr, ','))
+        {
+            // 忽略空的字符串
+            if (!curr.empty())
+            {
+                datas.push(curr);
+            }
+        }
+        return deser(datas);
+    }
+};
+
+// Your Codec object will be instantiated and called as such:
+// Codec* ser = new Codec();
+// Codec* deser = new Codec();
+// string tree = ser->serialize(root);
+// TreeNode* ans = deser->deserialize(tree);
+// return ans;
+```
+
 ### 530. 二叉搜索树的最小绝对差
 > 给你一棵所有节点为**非负值的二叉搜索**树，请你计算树中任意两节点的差的绝对值的最小值
 
